// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-cmkk1"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-nqzqws"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1c59oqk"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-nqzqws"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1c59oqk"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-48sn24"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-nqzqws"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-fom4n8"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-ic5bu4"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-ic5bu4"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;
